Fix no todos message size on mobile

--- a/app/styles/base/_mediaQueries.scss
+++ b/app/styles/base/_mediaQueries.scss
@@ -42,5 +42,8 @@
         .ui.button {
             font-size: 2.5rem;
         }
+        .no-todos-message {
+            font-size: 2.5rem;
+        }
     }
 }
